[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-helper"
version = "0.1.1"
description = "Python OpenAI schema helper"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Jack Huey" }
]

dependencies = [
  "openai>=1.90.0",
]
